visualgParser.py
# Generated from visualg.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class visualgParser ( Parser ):

    grammarFileName = "visualg.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'inicio'", "'fimAlgoritmo'", 
                     "'algoritmo'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'vetor'", "'de'", "'['", "']'", "'('", "')'", "','", 
                     "'<-'", "<INVALID>", "<INVALID>", "<INVALID>", "'..'", 
                     "<INVALID>", "'leia'", "'se'", "'entao'", "'senao'", 
                     "'fimse'", "'escolha'", "'caso'", "'outrocaso'", "'fimescolha'", 
                     "'-'", "'para'", "'ate'", "'faca'", "'fimpara'", "'repita'", 
                     "'enquanto'", "'fimenquanto'", "'interrompa'", "'procedimento'", 
                     "'fimprocedimento'", "'funcao'", "'retorne'", "'fimfuncao'", 
                     "';'", "'var'", "'on'", "'off'", "'arquivo'", "<INVALID>", 
                     "'pausa'", "<INVALID>", "<INVALID>", "'limpatela'", 
                     "':'", "'aleatorio'", "'timer'", "'passo'" ]

    symbolicNames = [ "<INVALID>", "TIPO_DE_DADO", "OPERADOR_BINARIO", "OPERADOR_RELACIONAL", 
                      "OPERADOR_LOGICO", "OPERADOR_UNARIO", "INICIO", "FIM_ALGORITMO", 
                      "ALGORITMO", "NOME_DA_VARIAVEL", "COMENTARIO", "STRING", 
                      "VETOR", "DE", "ABRE_COLCHETES", "FECHA_COLCHETES", 
                      "ABRE_PARENTESES", "FECHA_PARENTESES", "VIRGULA", 
                      "ATRIBUIR", "INTEIRO", "REAL", "BOOL", "PONTO_PONTO", 
                      "ESCREVA", "LEIA", "SE", "ENTAO", "SENAO", "FIM_SE", 
                      "ESCOLHA", "CASO", "OUTRO_CASO", "FIM_ESCOLHA", "MENOS", 
                      "PARA", "ATE", "FACA", "FIM_PARA", "REPITA", "ENQUANTO", 
                      "FIM_ENQUANTO", "INTERROMPA", "PROCEDIMENTO", "FIM_PROCEDIMENTO", 
                      "FUNCAO", "RETORNO", "FIM_FUNCAO", "PONTO_VIRGULA", 
                      "VAR", "ON", "OFF", "ARQUIVO", "NOME_ARQUIVO", "PAUSA", 
                      "ECO", "CRONOMETRO", "LIMPATELA", "DOIS_PONTOS", "ALEATORIO", 
                      "TIMER", "PASSO", "DIGIT" ]

    RULE_prog = 0
    RULE_variaveis_globais = 1
    RULE_variaveis_locais = 2
    RULE_procedimentos = 3
    RULE_funcoes = 4
    RULE_parametros = 5
    RULE_nome_do_procedimento = 6
    RULE_nome_da_funcao = 7
    RULE_expressoes = 8
    RULE_chamar_funcao = 9
    RULE_chamar_procedimento = 10
    RULE_atribuicao = 11
    RULE_constCaractere = 12
    RULE_constNumerico = 13
    RULE_constBool = 14
    RULE_escreva = 15
    RULE_leia = 16
    RULE_desvio_condicional = 17
    RULE_selecao_multipla = 18
    RULE_para_faca = 19
    RULE_enquanto_faca = 20
    RULE_repita_ate = 21
    RULE_aleatorio = 22
    RULE_arquivo = 23
    RULE_timer = 24
    RULE_lista_de_variaveis = 25
    RULE_lista_de_intervalo = 26
    RULE_tipo_da_variavel = 27
    RULE_tipo_vetor = 28
    RULE_intervalo = 29
    RULE_print_variavel = 30
    RULE_calculo = 31
    RULE_expressao_aritmetica = 32
    RULE_expressao_logica = 33
    RULE_selecao_aritmetica = 34
    RULE_selecao_logica = 35
    RULE_selecao_escolha = 36
    RULE_incremento = 37

    ruleNames =  [ "prog", "variaveis_globais", "variaveis_locais", "procedimentos", 
                   "funcoes", "parametros", "nome_do_procedimento", "nome_da_funcao", 
                   "expressoes", "chamar_funcao", "chamar_procedimento", 
                   "atribuicao", "constCaractere", "constNumerico", "constBool", 
                   "escreva", "leia", "desvio_condicional", "selecao_multipla", 
                   "para_faca", "enquanto_faca", "repita_ate", "aleatorio", 
                   "arquivo", "timer", "lista_de_variaveis", "lista_de_intervalo", 
                   "tipo_da_variavel", "tipo_vetor", "intervalo", "print_variavel", 
                   "calculo", "expressao_aritmetica", "expressao_logica", 
                   "selecao_aritmetica", "selecao_logica", "selecao_escolha", 
                   "incremento" ]

    EOF = Token.EOF
    TIPO_DE_DADO=1
    OPERADOR_BINARIO=2
    OPERADOR_RELACIONAL=3
    OPERADOR_LOGICO=4
    OPERADOR_UNARIO=5
    INICIO=6
    FIM_ALGORITMO=7
    ALGORITMO=8
    NOME_DA_VARIAVEL=9
    COMENTARIO=10
    STRING=11
    VETOR=12
    DE=13
    ABRE_COLCHETES=14
    FECHA_COLCHETES=15
    ABRE_PARENTESES=16
    FECHA_PARENTESES=17
    VIRGULA=18
    ATRIBUIR=19
    INTEIRO=20
    REAL=21
    BOOL=22
    PONTO_PONTO=23
    ESCREVA=24
    LEIA=25
    SE=26
    ENTAO=27
    SENAO=28
    FIM_SE=29
    ESCOLHA=30
    CASO=31
    OUTRO_CASO=32
    FIM_ESCOLHA=33
    MENOS=34
    PARA=35
    ATE=36
    FACA=37
    FIM_PARA=38
    REPITA=39
    ENQUANTO=40
    FIM_ENQUANTO=41
    INTERROMPA=42
    PROCEDIMENTO=43
    FIM_PROCEDIMENTO=44
    FUNCAO=45
    RETORNO=46
    FIM_FUNCAO=47
    PONTO_VIRGULA=48
    VAR=49
    ON=50
    OFF=51
    ARQUIVO=52
    NOME_ARQUIVO=53
    PAUSA=54
    ECO=55
    CRONOMETRO=56
    LIMPATELA=57
    DOIS_PONTOS=58
    ALEATORIO=59
    TIMER=60
    PASSO=61
    DIGIT=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(visualgParser.EOF, 0)

        def ALGORITMO(self):
            return self.getToken(visualgParser.ALGORITMO, 0)

        def STRING(self):
            return self.getToken(visualgParser.STRING, 0)

        def variaveis_globais(self):
            return self.getTypedRuleContext(visualgParser.Variaveis_globaisContext,0)


        def INICIO(self):
            return self.getToken(visualgParser.INICIO, 0)

        def FIM_ALGORITMO(self):
            return self.getToken(visualgParser.FIM_ALGORITMO, 0)

        def COMENTARIO(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.COMENTARIO)
            else:
                return self.getToken(visualgParser.COMENTARIO, i)

        def procedimentos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.ProcedimentosContext)
            else:
                return self.getTypedRuleContext(visualgParser.ProcedimentosContext,i)


        def funcoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.FuncoesContext)
            else:
                return self.getTypedRuleContext(visualgParser.FuncoesContext,i)


        def expressoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.ExpressoesContext)
            else:
                return self.getTypedRuleContext(visualgParser.ExpressoesContext,i)


        def getRuleIndex(self):
            return visualgParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = visualgParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(visualgParser.ALGORITMO)
            self.state = 77
            self.match(visualgParser.STRING)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==visualgParser.COMENTARIO:
                self.state = 78
                self.match(visualgParser.COMENTARIO)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.variaveis_globais()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==visualgParser.PROCEDIMENTO or _la==visualgParser.FUNCAO:
                self.state = 87
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [visualgParser.PROCEDIMENTO]:
                    self.state = 85
                    self.procedimentos()
                    pass
                elif token in [visualgParser.FUNCAO]:
                    self.state = 86
                    self.funcoes()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(visualgParser.INICIO)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << visualgParser.NOME_DA_VARIAVEL) | (1 << visualgParser.COMENTARIO) | (1 << visualgParser.ESCREVA) | (1 << visualgParser.LEIA) | (1 << visualgParser.SE) | (1 << visualgParser.ESCOLHA) | (1 << visualgParser.PARA) | (1 << visualgParser.REPITA) | (1 << visualgParser.ENQUANTO) | (1 << visualgParser.INTERROMPA) | (1 << visualgParser.ARQUIVO) | (1 << visualgParser.PAUSA) | (1 << visualgParser.ECO) | (1 << visualgParser.CRONOMETRO) | (1 << visualgParser.LIMPATELA) | (1 << visualgParser.ALEATORIO) | (1 << visualgParser.TIMER))) != 0):
                self.state = 93
                self.expressoes()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(visualgParser.FIM_ALGORITMO)
            self.state = 101
            self.match(visualgParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variaveis_globaisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lista_de_variaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.Lista_de_variaveisContext)
            else:
                return self.getTypedRuleContext(visualgParser.Lista_de_variaveisContext,i)


        def DOIS_PONTOS(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.DOIS_PONTOS)
            else:
                return self.getToken(visualgParser.DOIS_PONTOS, i)

        def tipo_da_variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.Tipo_da_variavelContext)
            else:
                return self.getTypedRuleContext(visualgParser.Tipo_da_variavelContext,i)


        def getRuleIndex(self):
            return visualgParser.RULE_variaveis_globais

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariaveis_globais" ):
                listener.enterVariaveis_globais(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariaveis_globais" ):
                listener.exitVariaveis_globais(self)




    def variaveis_globais(self):

        localctx = visualgParser.Variaveis_globaisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variaveis_globais)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==visualgParser.NOME_DA_VARIAVEL:
                self.state = 103
                self.lista_de_variaveis()
                self.state = 104
                self.match(visualgParser.DOIS_PONTOS)
                self.state = 105
                self.tipo_da_variavel()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variaveis_locaisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lista_de_variaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.Lista_de_variaveisContext)
            else:
                return self.getTypedRuleContext(visualgParser.Lista_de_variaveisContext,i)


        def DOIS_PONTOS(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.DOIS_PONTOS)
            else:
                return self.getToken(visualgParser.DOIS_PONTOS, i)

        def tipo_da_variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.Tipo_da_variavelContext)
            else:
                return self.getTypedRuleContext(visualgParser.Tipo_da_variavelContext,i)


        def getRuleIndex(self):
            return visualgParser.RULE_variaveis_locais

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariaveis_locais" ):
                listener.enterVariaveis_locais(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariaveis_locais" ):
                listener.exitVariaveis_locais(self)




    def variaveis_locais(self):

        localctx = visualgParser.Variaveis_locaisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variaveis_locais)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==visualgParser.NOME_DA_VARIAVEL:
                self.state = 112
                self.lista_de_variaveis()
                self.state = 113
                self.match(visualgParser.DOIS_PONTOS)
                self.state = 114
                self.tipo_da_variavel()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedimentosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDIMENTO(self):
            return self.getToken(visualgParser.PROCEDIMENTO, 0)

        def nome_do_procedimento(self):
            return self.getTypedRuleContext(visualgParser.Nome_do_procedimentoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(visualgParser.ParametrosContext,0)


        def variaveis_locais(self):
            return self.getTypedRuleContext(visualgParser.Variaveis_locaisContext,0)


        def INICIO(self):
            return self.getToken(visualgParser.INICIO, 0)

        def FIM_PROCEDIMENTO(self):
            return self.getToken(visualgParser.FIM_PROCEDIMENTO, 0)

        def COMENTARIO(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.COMENTARIO)
            else:
                return self.getToken(visualgParser.COMENTARIO, i)

        def expressoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.ExpressoesContext)
            else:
                return self.getTypedRuleContext(visualgParser.ExpressoesContext,i)


        def getRuleIndex(self):
            return visualgParser.RULE_procedimentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedimentos" ):
                listener.enterProcedimentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedimentos" ):
                listener.exitProcedimentos(self)




    def procedimentos(self):

        localctx = visualgParser.ProcedimentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_procedimentos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(visualgParser.PROCEDIMENTO)
            self.state = 122
            self.nome_do_procedimento()
            self.state = 123
            self.parametros()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==visualgParser.COMENTARIO:
                self.state = 124
                self.match(visualgParser.COMENTARIO)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.variaveis_locais()
            self.state = 131
            self.match(visualgParser.INICIO)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << visualgParser.NOME_DA_VARIAVEL) | (1 << visualgParser.COMENTARIO) | (1 << visualgParser.ESCREVA) | (1 << visualgParser.LEIA) | (1 << visualgParser.SE) | (1 << visualgParser.ESCOLHA) | (1 << visualgParser.PARA) | (1 << visualgParser.REPITA) | (1 << visualgParser.ENQUANTO) | (1 << visualgParser.INTERROMPA) | (1 << visualgParser.ARQUIVO) | (1 << visualgParser.PAUSA) | (1 << visualgParser.ECO) | (1 << visualgParser.CRONOMETRO) | (1 << visualgParser.LIMPATELA) | (1 << visualgParser.ALEATORIO) | (1 << visualgParser.TIMER))) != 0):
                self.state = 132
                self.expressoes()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(visualgParser.FIM_PROCEDIMENTO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncoesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCAO(self):
            return self.getToken(visualgParser.FUNCAO, 0)

        def nome_da_funcao(self):
            return self.getTypedRuleContext(visualgParser.Nome_da_funcaoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(visualgParser.ParametrosContext,0)


        def DOIS_PONTOS(self):
            return self.getToken(visualgParser.DOIS_PONTOS, 0)

        def TIPO_DE_DADO(self):
            return self.getToken(visualgParser.TIPO_DE_DADO, 0)

        def variaveis_locais(self):
            return self.getTypedRuleContext(visualgParser.Variaveis_locaisContext,0)


        def INICIO(self):
            return self.getToken(visualgParser.INICIO, 0)

        def RETORNO(self):
            return self.getToken(visualgParser.RETORNO, 0)

        def FIM_FUNCAO(self):
            return self.getToken(visualgParser.FIM_FUNCAO, 0)

        def COMENTARIO(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.COMENTARIO)
            else:
                return self.getToken(visualgParser.COMENTARIO, i)

        def expressoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.ExpressoesContext)
            else:
                return self.getTypedRuleContext(visualgParser.ExpressoesContext,i)


        def lista_de_variaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.Lista_de_variaveisContext)
            else:
                return self.getTypedRuleContext(visualgParser.Lista_de_variaveisContext,i)


        def chamar_funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.Chamar_funcaoContext)
            else:
                return self.getTypedRuleContext(visualgParser.Chamar_funcaoContext,i)


        def getRuleIndex(self):
            return visualgParser.RULE_funcoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncoes" ):
                listener.enterFuncoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncoes" ):
                listener.exitFuncoes(self)




    def funcoes(self):

        localctx = visualgParser.FuncoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(visualgParser.FUNCAO)
            self.state = 141
            self.nome_da_funcao()
            self.state = 142
            self.parametros()
            self.state = 143
            self.match(visualgParser.DOIS_PONTOS)
            self.state = 144
            self.match(visualgParser.TIPO_DE_DADO)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==visualgParser.COMENTARIO:
                self.state = 145
                self.match(visualgParser.COMENTARIO)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.variaveis_locais()
            self.state = 152
            self.match(visualgParser.INICIO)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << visualgParser.NOME_DA_VARIAVEL) | (1 << visualgParser.COMENTARIO) | (1 << visualgParser.ESCREVA) | (1 << visualgParser.LEIA) | (1 << visualgParser.SE) | (1 << visualgParser.ESCOLHA) | (1 << visualgParser.PARA) | (1 << visualgParser.REPITA) | (1 << visualgParser.ENQUANTO) | (1 << visualgParser.INTERROMPA) | (1 << visualgParser.ARQUIVO) | (1 << visualgParser.PAUSA) | (1 << visualgParser.ECO) | (1 << visualgParser.CRONOMETRO) | (1 << visualgParser.LIMPATELA) | (1 << visualgParser.ALEATORIO) | (1 << visualgParser.TIMER))) != 0):
                self.state = 153
                self.expressoes()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self.match(visualgParser.RETORNO)
            self.state = 162 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 162
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 160
                    self.lista_de_variaveis()
                    pass

                elif la_ == 2:
                    self.state = 161
                    self.chamar_funcao()
                    pass


                self.state = 164 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==visualgParser.NOME_DA_VARIAVEL):
                    break

            self.state = 166
            self.match(visualgParser.FIM_FUNCAO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_PARENTESES(self):
            return self.getToken(visualgParser.ABRE_PARENTESES, 0)

        def lista_de_variaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(visualgParser.Lista_de_variaveisContext)
            else:
                return self.getTypedRuleContext(visualgParser.Lista_de_variaveisContext,i)


        def DOIS_PONTOS(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.DOIS_PONTOS)
            else:
                return self.getToken(visualgParser.DOIS_PONTOS, i)

        def TIPO_DE_DADO(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.TIPO_DE_DADO)
            else:
                return self.getToken(visualgParser.TIPO_DE_DADO, i)

        def FECHA_PARENTESES(self):
            return self.getToken(visualgParser.FECHA_PARENTESES, 0)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.VAR)
            else:
                return self.getToken(visualgParser.VAR, i)

        def PONTO_VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(visualgParser.PONTO_VIRGULA)
            else:
                return self.getToken(visualgParser.PONTO_VIRGULA, i)

        def getRuleIndex(self):
            return visualgParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = visualgParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(visualgParser.ABRE_PARENTESES)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==visualgParser.VAR:
                self.state = 169
                self.match(visualgParser.VAR)

